--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -13,5 +13,5 @@
     grid-column: span 8 / span 8;
     grid-row: span 7 / span 7;
     grid-row-start: 2;
+    text-align-last: center;
 }
-        
